# anaconda-client

./: .binstar.yml  .checkignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  123movies-watch-alita-battle-angel-online-free-streaming  CHANGELOG.md  CHANGELOG.txt  Captain Marvel  LICENSE.md  MANIFEST.in  Makefile  NOTES.md  README.md  RELEASE.md  Streaming!!WATCH Captain Marvel (2019) ONLINE FULL MOVIE 123HDHQ fRee  appveyor.yml  cgvmovie  circle.yml  conda.yaml  digest  free-avengers-infinity-war-online-hd-quality  make_version.py  pr.py  pyproject.toml  record.txt  requirements-dev.txt  requirements-extra.txt  requirements-pip.txt  requirements.txt  runtests.sh  setup.cfg  setup.py  signature  versioneer.py
.circleci/: config.yml
.github/workflows/: build.yml  check-master.yml  lint-and-test.yml  pre-commit.yaml  release.yaml
.pytest_cache/v/cache/: lastfailed  nodeids
autotest/: autotest.sh
autotest/data/: bcj-cffi-0.5.1-py310h295c915_0.tar.bz2  conda_gc_test-1.2.1-3.tar.bz2  conda_gc_test_metadata.json  hello_binstar.ipynb  test_env.yml
binstar_client/: __about__.py  __init__.py  _version.py  client.py  deprecations.py  errors.py  plugins.py  pprintb.py  repo_plugin.py  requests_ext.py  utils.py
binstar_client/build_commands/: __init__.py  _build.py  build.py  ctrl.py  info.py  init_build.py  keyfile.py  submit.py
binstar_client/commands/: __init__.py  _channel_notices.py  _files.py  _login.py  _package.py  _release.py  _repo_app.py  _repo_channels.py  _repo_upload.py  _whoami.py  authorizations.py  build.py  channel.py  collection.py  config.py  copy.py  download.py  files.py  groups.py  login.py  logout.py  move.py  notebook.py  notices.py  package.py  publish.py  register.py  remove.py  search.py  show.py  update.py  upload.py  whoami.py
binstar_client/inspect_package/: conda.py  conda_installer.py  env.py  ipynb.py  profile.py  pypi.py  r.py  uitls.py  utils.py
binstar_client/inspect_package/tests/: test_cluster_profile.py  test_conda.py  test_env.py  test_ipynb.py  test_pypi.py  test_r.py
binstar_client/mixins/: build.py  channels.py  collections.py  notices.py  organizations.py  package.py  publish.py
binstar_client/repo/: __init__.py  api.py  upload.py
binstar_client/repocore/: __init__.py  client.py  config.py  detect.py  errors.py  models.py  package_utils.py  resolve.py
binstar_client/scripts/: build.py  cli.py
binstar_client/tests/: coverage_report.py  fixture.py  runner.py  runtests.py  test_authorizations.py  test_cli.py  test_config.py  test_copy.py  test_groups.py  test_ipynb.py  test_license.py  test_login.py  test_packages.py  test_register.py  test_requests_ext.py  test_subdir.py  test_update.py  test_upload.py  test_whoami.py  urlmock.py
binstar_client/tests/data/: foo.ipynb  test-3.0.ipynb  test.ipynb
binstar_client/tests/utils/: test_config.py
binstar_client/utils/: __init__.py  appdirs.py  build_file.py  conda.py  config.py  decorators.py  detect.py  handlers.py  http_codes.py  logging_utils.py  multipart_uploader.py  paths.py  pprint.py  projects.py  rm.py  spec.py  tables.py  yaml.py
binstar_client/utils/notebook/: __init__.py  data_uri.py  downloader.py  finder.py  inflection.py  scm.py  uploader.py
binstar_client/utils/projects/: __init__.py  filer.py  filters.py  inspectors.py  models.py  uploader.py
conda.recipe/: bld.bat  build.sh  meta.yaml
doc/: Makefile  api.rst  channel_notices.md  condarc.rst  conf.py  faq.rst  getting_started.rst  index.rst  installing_packages.rst  pypi_to_binstar.rst  support.rst
doc/old-binstar-docs/: faq.rst  getting_started.rst  index.rst  support.rst  windows.rst
etc/: build.conda-lock.yml  build.environment.yml  pre-commit-environment.yml
example-packages/: environment.yml
example-packages/bokeh-apps/: timeout.py
example-packages/conda/: GARE  build.sh  meta.yaml
example-packages/conda_metapackage/: meta.yaml
example-packages/no-arch/: meta.yaml
example-packages/pypi/: .binstar.yml  setup.py
example-packages/test-app-icon-package/: meta.yaml
foo/: .binstar.yml
repo_cli/: __init__.py  errors.py  main.py
repo_cli/commands/: auth.py  base.py  channel.py  config.py  copy.py  cves.py  login.py  logout.py  mirror.py  move.py  remove.py  search.py  upload.py
repo_cli/utils/: __init__.py  api.py  artifacts.py  conda.py  config.py  format.py
scripts/: refresh_coveragerc.py
test/: r.txt
test/conda/: .binstar.yml  meta.yaml
test/conda_metapackage/: dev.txt  enterprise-0.1.txt  enterprise.txt
test/pypi/: .binstar.yml  setup.py
tests/: __init__.py  conftest.py  fixture.py  runner.py  runtests.py  test_authorizations.py  test_cli.py  test_config.py  test_copy.py  test_groups.py  test_integration.py  test_license.py  test_login.py  test_notices.py  test_packages.py  test_register.py  test_repocore.py  test_requests_ext.py  test_subdir.py  test_update.py  test_upload.py  test_whoami.py  urlmock.py
tests/data/: foo-0.1-0.tar.bz2  foo.ipynb  metadata.json  netrc
tests/inspect_package/: __init__.py  test_conda.py  test_env.py  test_ipynb.py  test_pypi.py  test_r.py
tests/utils/: __init__.py  test_conda.py  test_config.py  test_detect.py  test_parse_specs.py  test_spec.py  utils.py
(+46 files in other folders)
