[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs>=0.3", "hatch-requirements-txt"]

[project]
author = "Anaconda, Inc."
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
]
description = "Client library and CLI plugin for anaconda.org"
dynamic = ["dependencies", "optional-dependencies", "version"]
license = {text = "BSD-3-Clause"}
name = "anaconda-client"
readme = "README.md"
requires-python = ">=3.8"
urls = {source = "https://github.com/anaconda/anaconda-client"}

[project.entry-points."anaconda_cli.subcommand"]
org = "binstar_client.plugins:app"

[project.scripts]
# Legacy entrypoints
binstar = "binstar_client.scripts.cli:main"
conda-server = "binstar_client.scripts.cli:main"

[tool.distutils.bdist_wheel]
universal = true

[tool.hatch.build.hooks.vcs]
version-file = "binstar_client/_version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/binstar_client",
  "/pyproject.toml",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["binstar_client"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
dev = ["requirements-dev.txt"]
full = ["requirements-extra.txt"]

[tool.hatch.version]
source = "vcs"
