[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs>=0.3", "setuptools-scm>=7.1", "hatch-requirements-txt"]

[project]
author = "Anaconda, Inc."
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
]
description = "Client library and CLI plugin for anaconda.org"
dynamic = ["dependencies", "optional-dependencies", "version"]
license = {text = "BSD-3-Clause"}
name = "anaconda-client"
readme = "README.md"
requires-python = ">=3.8"
urls = {source = "https://github.com/anaconda/anaconda-client"}

[project.entry-points."anaconda_cli.subcommand"]
org = "binstar_client.plugins:app"

[project.scripts]
# Legacy entrypoints
binstar = "binstar_client.scripts.cli:main"
conda-server = "binstar_client.scripts.cli:main"

[tool.distutils.bdist_wheel]
universal = true

[tool.hatch.build.hooks.vcs]
version-file = "binstar_client/_version.py"

[tool.hatch.build.targets.sdist]
include = [
  "binstar_client/",
  "tests/",
  "pyproject.toml",
  "LICENSE.md",
]

[tool.hatch.build.targets.wheel]
packages = ["binstar_client"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
dev = ["requirements-dev.txt"]
full = ["requirements-extra.txt"]

[tool.hatch.version]
source = "vcs"

[tool.mypy]
cache_dir = ".cache/mypy"
ignore_missing_imports = true
python_version = "3.9"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--cov=binstar_client",
  "--cov-report=term-missing",
  "--durations=10",
]
cache_dir = ".cache/pytest"
# Treat all warnings errors: https://til.simonwillison.net/pytest/treat-warnings-as-errors
filterwarnings = [
  "error",
]

[tool.ruff]
exclude = ["example-packages", "**/*.ipynb"]
# The pylint settings had a max line length of 120, so keeping that to reduce changeset
line-length = 120

[tool.ruff.format]
# TODO: Defer changing quote style to minimize initial changeset
quote-style = "preserve"

[tool.ruff.lint]
# TODO: These ignores handle * imports and also unused imports. We should fix them safely.
ignore = ["F401", "F403", "F405"]
